# bulk-image

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/app/: config.py  config_spec.md  conftest.py  dependencies.py  dependencies_spec.md  main.py  main_spec.md  test_config.py  test_dependencies.py  test_integration.py  test_main.py
backend/app/api/: auth_router.py  auth_router_spec.md  image_router.py  image_router_spec.md  job_router.py  job_router_spec.md  preset_router.py  preset_router_spec.md  test_auth_router.py  test_image_router.py  test_job_router.py  test_preset_router.py
backend/app/core/: color_engine.py  color_engine_spec.md  color_extractor.py  color_extractor_spec.md  image_converter.py  image_converter_spec.md  models.py  models_spec.md  test_color_engine.py  test_color_extractor.py  test_image_converter.py  test_models.py  test_zip_builder.py  zip_builder.py  zip_builder_spec.md
backend/app/infrastructure/: auth_provider.py  auth_provider_spec.md  file_storage.py  file_storage_spec.md  preset_store.py  preset_store_spec.md  task_store.py  task_store_spec.md  test_auth_provider.py  test_file_storage.py  test_preset_store.py  test_task_store.py
backend/app/services/: image_service.py  image_service_spec.md  job_service.py  job_service_spec.md  preset_service.py  preset_service_spec.md  test_image_service.py  test_job_service.py  test_preset_service.py
docs/: ARCHITECTURE.md
frontend/: .dockerignore  Dockerfile  eslint.config.js  (+7 more)
(+21 files in other folders)
